--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,9 @@ python:
   - "2.7"
 install:
   - pip install -r requirements.txt
-script: nosetests
+  - pip install coveralls
+script:
+ - nosetests
+ - coverage run --source=gang setup.py test
+after_success:
+  coveralls
