--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ python:
 install:
   - pip install -r requirements.txt
   - pip install coveralls
+  - pip install unittest2
 script:
  - nosetests
  - coverage run --source=gang setup.py test
